--- a/files/index.html
+++ b/files/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Heretic Entertainment</title>
+        <title>Heretic Entertainment</title> <!-- Tab Name -->
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
-    <body>
-        <div class="container">
-            <div class="nav">
+    <body> <!-- whole page -->
+        <div class="container"> <!-- contains "nav" bar and main body -->
+            <div class="nav"> <!-- contains nav bar -->
                 <h2>Info</h2>
                 <ul>
-                    <li>Who Are We?</li>
+                    <li><div class="who-are-we-btn"><a>Who Are We?</a></div></li>
                     <li>What Are We Doing?</li>
                     <li>Join The Team</li>
                 </ul>
@@ -18,7 +18,8 @@
             <div class="main">
                 <h1>Heretic Entertainment</h1>
                 <h3>We Make Games</h3>
-                <p>This is the site for our game development. It should hold downloads and anything else we want to show off.  Here is a link to <a href="https://www.google.com/">Google.</a></p>
+                <p>This is the site for our game development. It should hold downloads and anything else we want to show off.  
+                    Here is a link to <a href="https://www.google.com/">Google.</a></p>
                 <video width="320" height="240" controls>
                     <source src="https://content.codecademy.com/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
                 </video>
