--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Heretic Entertainment</title> <!-- Tab Name -->
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     </head>
     <body> <!-- whole page -->
         <div class="container"> <!-- contains "nav" bar and main body -->
