--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="main">
                 <h1>Heretic Entertainment</h1>
                 <h3>We Make Games</h3>
-                <p>This is the site for our game development. It should hold downloads and anything else we want to show off.  
+                <p>aaaaaaaThis is the site for our game development. It should hold downloads and anything else we want to show off.  
                     Here is a link to <a href="https://www.google.com/">Google.</a></p>
                 <video width="320" height="240" controls>
                     <source src="https://content.codecademy.com/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
