--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
     <head>
         <title>Heretic Entertainment</title> <!-- Tab Name -->
         <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="main.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
+        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" 
+        crossorigin="anonymous">                                                                            <!-- import bootstrap -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css"> <!-- import font -->
+        <link rel="stylesheet" type="text/css" href="main.css"> <!-- call main.css -->
     </head>
     <body> <!-- whole page -->
-        <div class="container"> <!-- contains "nav" bar and main body -->
-            <div class="nav"> <!-- contains nav bar -->
-                <h2>Info</h2>
-                <ul>
-                    <li><div class="who-are-we-btn"><a>Who Are We?</a></div></li>
-                    <li>What Are We Doing?</li>
-                    <li>Join The Team</li>
-                </ul>
+
+        <header class="container"> <!-- header -->
+            <div class="row">
+                <h1 class="col-sm-4">Heretic Entertainment</h1>
+                <nav class="col-sm-8 text-right">
+                    <p>About Us</p>
+                    <p>Our Work</p>
+                    <p>Join the Team</p>
+                </nav>
             </div>
-            <div class="main">
-                <h1>Heretic Entertainment</h1>
-                <h3>We Make Games</h3>
-                <p>aaaaaaaThis is the site for our game development. It should hold downloads and anything else we want to show off.  
-                    Here is a link to <a href="https://www.google.com/">Google.</a></p>
-                <video width="320" height="240" controls>
-                    <source src="https://content.codecademy.com/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
-                </video>
+        </header>
+
+        <section class="jumbotron"> <!-- center bar -->
+            <div class="container">
+                <div class="row text-center">
+                    <h2>Escape</h2>
+                    <h3>Our First Game</h3>
+                    <a class="btn btn-primary" href="#" role="button">View</a>
+                </div>
             </div>
-        </div>
+        </section>
     </body>
 </html>
