--- a/Header/AboutUs.html
+++ b/Header/AboutUs.html
@@ -7,7 +7,7 @@
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" 
         crossorigin="anonymous">                                                                            <!-- import bootstrap -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css"> <!-- import font -->
-        <link rel="stylesheet" type="text/css" href="main.css"> <!-- call main.css -->
+        <link rel="stylesheet" type="text/css" href="../main.css"> <!-- call main.css -->
     </head>
     <body> <!-- whole page -->
 
@@ -15,7 +15,7 @@
             <div class="row">
                 <h1 class="col-sm-4">Heretic Entertainment</h1>
                 <nav class="col-sm-8 text-right">
-                    <p><a href="index.html">Home</a></p>
+                    <p><a href="../index.html">Home</a></p>
                     <p><a href="Header\AboutUs.html">About Us</a></p>
                     <p><a href="Header\Team.html">Meet the Team</a></p>
                     <p><a href="Header\Contact.html">Contact</a></p>
