--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
 
         <section class="jumbotron"> <!-- center bar -->
-            <div class="container">
+            <div class="container" id="jcont">
                 <div class="row text-center">
                     <h2>Escape</h2>
                     <h3>Our First Game</h3>
