--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="jumbotron"> <!-- center bar -->
             <div class="container" id="jcont">
                 <div class="row text-center">
-                    <h2>Escape</h2>
+                    <h2>ESCAPE</h2>
                     <h3>Our First Game</h3>
                     <a class="btn btn-primary" href="Projects/Escape.html" role="button">View</a>
                 </div>
@@ -58,7 +58,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">Property of Heretic Entertainment</p>
+                <p class="col-sm-4">&copyHeretic Entertainment 2023</p>
             </div>
         </footer>
     </body>
