--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <h1 class="col-sm-4">Heretic Entertainment</h1>
                 <nav class="col-sm-8 text-right">
                     <p><a href="index.html">Home</a></p>
-                    <p><a href="Header\AboutUs.html">About Us</a></p>
-                    <p><a href="Header\Team.html">Meet the Team</a></p>
-                    <p><a href="Header\Contact.html">Contact</a></p>
+                    <p><a href="Header/AboutUs.html">About Us</a></p>
+                    <p><a href="Header/Team.html">Meet the Team</a></p>
+                    <p><a href="Header/Contact.html">Contact</a></p>
                 </nav>
             </div>
         </header>
