About the Team Style

--- a/Header/Team.html
+++ b/Header/Team.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous">                                                                            <!-- import bootstrap -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css"> <!-- import font -->
         <link rel="stylesheet" type="text/css" href="../main.css"> <!-- call main.css -->
+        <link rel="stylesheet" type="text/css" href="Team.css"> <!-- call Team.css -->
     </head>
     <body> <!-- whole page -->
 
@@ -35,32 +36,47 @@
         <section class="container" id="showcase">
             <div class="row">
                 <figure class="col-sm-6">
-                    <h2>Liam "LiamMoquin" Moquin</h2>
-                    <p>stuff goes here</p>
+                    <div class="border">
+                        <h2>Liam Moquin</h2>
+                        <p>Project Head</p>
+                        <p>Lead Programmer</p>
+                    </div>
                 </figure>
                 <figure class="col-sm-6">
-                    <h2>Torben "Rising Leaf" Hans</h2>
-                    <p>stuff goes here</p>
-                </figure>
-            </div>
-            <div class="row">
-                <figure class="col-sm-6">
-                    <h2>Athanasios "Cloonsey" Wees</h2>
-                    <p>stuff goes here</p>
-                </figure>
-                <figure class="col-sm-6">
-                    <h2>Benoit "thefundipdemon" Vallaint</h2>
-                    <p>stuff goes here</p>
+                    <div class="border">
+                        <h2>Torben Hans</h2>
+                        <p>Programmer</p>
+                    </div>
                 </figure>
             </div>
             <div class="row">
                 <figure class="col-sm-6">
-                    <h2>Bryn "str4-jpg" Colongioli</h2>
-                    <p>stuff goes here</p>
+                    <div class="border">
+                        <h2>Athanasios Wees</h2>
+                        <p>Lead Music</p>
+                    </div>
                 </figure>
                 <figure class="col-sm-6">
-                    <h2>Luk&aacute;&scaron; "Prahg" Karas</h2>
-                    <p>stuff goes here</p>
+                    <div class="border">
+                        <h2>Benoit Vaillant</h2>
+                        <p>Lead Sound Effects</p>
+                        <p>Lead Story</p>
+                    </div>
+                </figure>
+            </div>
+            <div class="row">
+                <figure class="col-sm-6">
+                    <div class="border">
+                        <h2>Bryn Colongioli</h2>
+                        <p>Lead Graphics</p>
+                        <p>Concept Art</p>
+                    </div>
+                </figure>
+                <figure class="col-sm-6">
+                    <div class="border">
+                        <h2>Luk&aacute;&scaron; Karas</h2>
+                        <p>Background Art</p>
+                    </div>
                 </figure>
             </div>
         </section>
