--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
         <header class="container"> <!-- header -->
             <div class="row">
-                <h1 class="col-sm-4">Heretic Entertainment</h1>
-                <nav class="col-sm-8 text-right">
+                <div class="col-sm-5">
+                    <img src="Images/the_heretic_fixed_small.png" height="50px">
+                    <h1>Heretic Entertainment</h1>
+                </div>
+                <nav class="col-sm-7 text-right">
                     <p><a href="index.html">Home</a></p>
                     <p><a href="Header/AboutUs.html">About Us</a></p>
                     <p><a href="Header/Team.html">Meet the Team</a></p>
