adding logo and fixing links

--- a/Team.html
+++ b/Team.html
@@ -7,16 +7,19 @@
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" 
         crossorigin="anonymous">                                                                            <!-- import bootstrap -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css"> <!-- import font -->
-        <link rel="stylesheet" type="text/css" href="../main.css"> <!-- call main.css -->
+        <link rel="stylesheet" type="text/css" href="main.css"> <!-- call main.css -->
         <link rel="stylesheet" type="text/css" href="Team.css"> <!-- call Team.css -->
     </head>
     <body> <!-- whole page -->
 
         <header class="container"> <!-- header -->
             <div class="row">
-                <h1 class="col-sm-4">Heretic Entertainment</h1>
-                <nav class="col-sm-8 text-right">
-                    <p><a href="../index.html">Home</a></p>
+                <div class="col-sm-5">
+                    <img src="Images/the_heretic_fixed_small.png" height="50px">
+                    <h1>Heretic Entertainment</h1>
+                </div>
+                <nav class="col-sm-7 text-right">
+                    <p><a href="index.html">Home</a></p>
                     <p><a href="AboutUs.html">About Us</a></p>
                     <p><a href="Team.html">Meet the Team</a></p>
                     <p><a href="Contact.html">Contact</a></p>
