--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </div>
                 <nav class="col-sm-7 text-right">
                     <p><a href="index.html">Home</a></p>
-                    <p><a href="Header/AboutUs.html">About Us</a></p>
-                    <p><a href="Header/Team.html">Meet the Team</a></p>
-                    <p><a href="Header/Contact.html">Contact</a></p>
+                    <p><a href="AboutUs.html">About Us</a></p>
+                    <p><a href="Team.html">Meet the Team</a></p>
+                    <p><a href="Contact.html">Contact</a></p>
                 </nav>
             </div>
         </header>
