Added an image and starting on about us

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous">                                                                            <!-- import bootstrap -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css"> <!-- import font -->
         <link rel="stylesheet" type="text/css" href="main.css"> <!-- call main.css -->
+        <link rel="stylesheet" type="text/css" href="AboutUs.css">
     </head>
     <body> <!-- whole page -->
 
@@ -30,8 +31,17 @@
             <div class="container">
                 <div class="row text-center">
                     <h2>About Us</h2>
-                    <p>Our First Game</p>
+                    <p>Who We Are</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="container" id="showcase">
+            <div class="border">
+                <p>
+                    Heretic Entertainment is a small group of friends who are passionate about game development.
+                    we have
+                </p>
             </div>
         </section>
 
