Contact form finished

--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
 
 
         <div class="container" id="inputs">
-            <form action="send_email.php">
+            <form action="https://formspree.io/f/xyyalorb" method="POST">
           
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="firstname" placeholder="Your name..">
