About Us Formatting

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -40,7 +40,9 @@
             <div class="border">
                 <p>
                     Heretic Entertainment is a small group of friends who are passionate about game development.
-                    we have
+                    We have a mission to create high-quality games that bring joy and entertainment to our players.
+                    Our team is composed of new but passionate game developers, artists, and designers who work together
+                    to create immersive gaming experiences.
                 </p>
             </div>
         </section>
