Changing About us + ben roles

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -42,7 +42,7 @@
                     Heretic Entertainment is a small group of friends who are passionate about game development.
                     We have a mission to create high-quality games that bring joy and entertainment to our players.
                     Our team is composed of new but passionate game developers, artists, and designers who work together
-                    to create immersive gaming experiences.
+                    to create enjoyable gaming experiences.
                 </p>
             </div>
         </section>
