--- a/Team.html
+++ b/Team.html
@@ -62,8 +62,7 @@
                 <figure class="col-sm-6">
                     <div class="border">
                         <h2>Benoit Vaillant</h2>
-                        <p>Lead Sound Effects</p>
-                        <p>Lead Story</p>
+                        <p>Story</p>
                     </div>
                 </figure>
             </div>
