--- a/Contact.html
+++ b/Contact.html
@@ -20,6 +20,7 @@
                 </div>
                 <nav class="col-sm-7 text-right">
                     <p><a href="index.html">Home</a></p>
+                    <p><a href="Journal.html">Journal</a></p>
                     <p><a href="AboutUs.html">About Us</a></p>
                     <p><a href="Team.html">Meet the Team</a></p>
                     <p><a href="Contact.html">Contact</a></p>
