Journal and changed team

--- a/Team.html
+++ b/Team.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <figure class="col-sm-6">
                     <div class="border">
-                        <h2>Athanasios Wees</h2>
+                        <h2><s>Athanasios Wees</s></h2>
                         <p>Lead Music</p>
                     </div>
                 </figure>
@@ -70,15 +70,30 @@
             <div class="row">
                 <figure class="col-sm-6">
                     <div class="border">
-                        <h2>Bryn Colongioli</h2>
+                        <h2><s>Bryn Colongioli</s></h2>
                         <p>Lead Graphics</p>
                         <p>Concept Art</p>
                     </div>
                 </figure>
                 <figure class="col-sm-6">
                     <div class="border">
-                        <h2>Luk&aacute;&scaron; Karas</h2>
+                        <h2><s>Luk&aacute;&scaron; Karas</s></h2>
                         <p>Background Art</p>
+                    </div>
+                </figure>
+            </div>
+            <div class="row">
+                <figure class="col-sm-6">
+                    <div class="border">
+                        <h2>Leo Daynard</h2>
+                        <p>Ship Art</p>
+                    </div>
+                </figure>
+                <figure class="col-sm-6">
+                    <div class="border">
+                        <h2>Conall Sanders</h2>
+                        <p>Ship Art</p>
+                        <p>Object Art</p>
                     </div>
                 </figure>
             </div>
