--- a/Journal.html
+++ b/Journal.html
@@ -95,7 +95,10 @@
                     </div>
                 </figure>
                 <figure class="col-sm-4">
-                    <img src="Images/GravPic.PNG">
+                    <video width="100%" controls>
+                        <source src="Videos/VelocityVectorExample.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </figure>
             </div>
         </section>
