Updating showcase on index and minor tweaks

--- a/Contact.html
+++ b/Contact.html
@@ -65,7 +65,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">Property of Heretic Entertainment</p>
+                <p class="col-sm-4">&copyHeretic Entertainment 2024</p>
             </div>
         </footer>
     </body>
