--- a/Journal.html
+++ b/Journal.html
@@ -205,7 +205,7 @@
                     <div class="border">
                         <h4>Gravity #2: The Problem</h4>
                         <p>
-                            I have been using Unity's built in gravity mass system attached to object rigidBodies because it is really easy to manage and I can use the builtin
+                            I have been using Unity's built in mass system attached to object rigidBodies because it is really easy to manage and I can use the builtin
                             force systems for my custom gravity script. Unfortunately, this mass and force system has a few major limitations. The first limitation, is that
                             there is a limit to how massive an object is able to be. For most projects, that would be alright, but for a space game where some objects need to
                             be orders of magnitude heavier than others it causes problems. The second problem is that there is no way to give a negative mass to the system as
@@ -319,7 +319,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">Property of Heretic Entertainment</p>
+                <p class="col-sm-4">&copyHeretic Entertainment 2024</p>
             </div>
         </footer>
     </body>
