--- a/AboutUs.html
+++ b/AboutUs.html
@@ -50,7 +50,7 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">Property of Heretic Entertainment</p>
+                <p class="col-sm-4">&copyHeretic Entertainment 2024</p>
             </div>
         </footer>
     </body>
