--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                     <img src="Videos/GravDemo.gif">
                 </figure>
             </div>
+            <div class="row">
+                <figure class="col-sm-6">
+                    <p>Boids</p>
+                    <img src="Videos/BoidsDemo.gif">
+                </figure>
+                <figure class="col-sm-6">
+                    <p>Boids Vision</p>
+                    <img src="Videos/BoidsVisDemo.gif">
+                </figure>
+            </div>
         </section>
 
         <footer class="container">
