Better alignment for text

--- a/Journal.html
+++ b/Journal.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css"> <!-- import font -->
         <link rel="stylesheet" type="text/css" href="main.css"> <!-- call main.css -->
         <link rel="stylesheet" type="text/css" href="AboutUs.css">
+        <link rel="stylesheet" type="text/css" href="Journal.css">
         <!--MathJax for equations-->
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -275,20 +276,20 @@
                             for this system will be:
                             <br>
                             <ul>
-                                <li>Custom Mass Handler</li>
+                                <li class="centered">Custom Mass Handler</li>
                                 <ul>
                                     <li>Must allow incredibly large masses for solar system or greater scale scenes</li>
                                     <li>Must allow negative masses for a few fun ideas I have later (ex. gravity propulsion and weapons)</li>
                                 </ul>
                                 <br>
-                                <li>Interacts with Current Gravity Handler</li>
+                                <li class="centered">Interacts with Current Gravity Handler</li>
                                 <ul>
                                     <li>My current gravity handler works really well and it should be simple enough to define the new physics system as a class to allow
                                         calling it in a similar way to the built in physics system
                                     </li>
                                 </ul>
                                 <br>
-                                <li>Custom Force Handler</li>
+                                <li class="centered">Custom Force Handler</li>
                                 <ul>
                                     <li>If I move away from using the default physics system for mass, I will also need to move away from the linked forces system which is
                                         currently the backbone of my game. This will be a significant challenge as I will need to make something comparable and nearly as
@@ -308,6 +309,22 @@
                                     </li>
                                 </ul>
                             </ul>
+                        </p>
+                    </div>
+                </figure>
+                <figure class="col-sm-4">
+                    <img src="">
+                </figure>
+            </div>
+        </section>
+
+        <section class="container" id="showcase">
+            <div class="row">
+                <figure class="col-sm-8">
+                    <div class="border">
+                        <h4>Physics #2:</h4>
+                        <p>
+                            
                         </p>
                     </div>
                 </figure>
