--- a/AboutUs.html
+++ b/AboutUs.html
@@ -50,7 +50,9 @@
 
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">&copyHeretic Entertainment 2024</p>
+                <p class="col-sm-2">&copyHeretic Entertainment 2024</p>
+                <p class="col-sm-9"></p>
+                <a href="https://discord.gg/E9jE3sm3"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" width="40"></a>
             </div>
         </footer>
     </body>
